k8s/app.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app
  namespace: perf-lab

spec:
  replicas: 2

  selector:
    matchLabels:
      app: spring

  template:
    metadata:
      labels:
        app: spring

    spec:
      containers:
        - name: app

          image: docker.io/library/java-performance-demo-app:latest

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service

metadata:
  name: app
  namespace: perf-lab

spec:
  selector:
    app: spring

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP

---

apiVersion: v1
kind: Service

metadata:
  name: app
  namespace: perf-lab

spec:
  type: NodePort

  selector:
    app: spring

  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
