k8s/grafana.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: perf-lab

spec:
  replicas: 1

  selector:
    matchLabels:
      app: grafana

  template:
    metadata:
      labels:
        app: grafana

    spec:
      securityContext:
        fsGroup: 472

      containers:
        - name: grafana
          image: grafana/grafana:latest

          ports:
            - containerPort: 3000

          volumeMounts:
            - name: grafana-data
              mountPath: /var/lib/grafana

            - name: grafana-provisioning-datasources
              mountPath: /etc/grafana/provisioning/datasources
              readOnly: true

            - name: grafana-provisioning-dashboards
              mountPath: /etc/grafana/provisioning/dashboards
              readOnly: true

            - name: grafana-dashboards
              mountPath: /var/lib/grafana/dashboards
              readOnly: true

      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-pvc

        - name: grafana-provisioning-datasources
          configMap:
            name: grafana-datasources

        - name: grafana-provisioning-dashboards
          configMap:
            name: grafana-dashboard-providers

        - name: grafana-dashboards
          configMap:
            name: grafana-dashboards

---

apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: perf-lab

spec:
  type: NodePort

  selector:
    app: grafana

  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30030
