k8s/prometheus.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: prometheus
  namespace: perf-lab

spec:
  replicas: 1

  selector:
    matchLabels:
      app: prometheus

  template:
    metadata:
      labels:
        app: prometheus

    spec:
      securityContext:
        fsGroup: 65534

      containers:
        - name: prometheus
          image: prom/prometheus:latest

          securityContext:
            runAsUser: 65534
            runAsGroup: 65534

          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
            - "--storage.tsdb.retention.time=7d"

          ports:
            - containerPort: 9090

          volumeMounts:
            - name: config
              mountPath: /etc/prometheus
              readOnly: true

            - name: prometheus-data
              mountPath: /prometheus

      volumes:
        - name: config
          configMap:
            name: prometheus-config

        - name: prometheus-data
          persistentVolumeClaim:
            claimName: prometheus-pvc

---

apiVersion: v1
kind: Service

metadata:
  name: prometheus
  namespace: perf-lab

spec:
  type: NodePort

  selector:
    app: prometheus

  ports:
    - port: 9090
      targetPort: 9090
      nodePort: 30090
