k8s/redis-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-exporter
  namespace: perf-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-exporter
  template:
    metadata:
      labels:
        app: redis-exporter
    spec:
      containers:
        - name: redis-exporter
          image: oliver006/redis_exporter:v1.62.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9121
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: redis-exporter
  namespace: perf-lab
spec:
  type: ClusterIP
  selector:
    app: redis-exporter
  ports:
    - name: http
      port: 9121
      targetPort: 9121
